inserito sconto nella card

--- a/index.html
+++ b/index.html
@@ -12,21 +12,30 @@
     <!-- corpo principale della pagina -->
     <main class="container">
 
-      <div class="card">
-        <a href="">
-          <!-- carichiamo l'immagine -->
-          <img src="img/pd1.jpg" alt="ipad bianco con sfondo grigio">
+      <section>
 
-          <!-- creiamo icona sconto -->
-          <span class="sales">-30%</span>
-          <!-- /icona sconto -->
+        <div class="card">
 
-          <!-- cuore preferiti -->
-          <span class="heart"></span>
-          <!-- /cuore preferiti -->
-        </a>
+          <!-- creiamo il collegamento hypertext -->
+          <a href="">
+            <!-- carichiamo l'immagine -->
+            <img src="img/pd1.jpg" alt="ipad bianco con sfondo grigio">
 
-      </div>
+
+
+            <!-- creiamo icona sconto -->
+            <div class="sales green">-30%</div>
+            <!-- /icona sconto -->
+
+            <!-- cuore preferiti -->
+            <div class="heart">&#x2665;</div>
+            <!-- /cuore preferiti -->
+
+          </a>
+
+        </div>
+
+      </section>
 
 
 
