prima row con 3 prodotti

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
       <section>
 
+        <!-- creiamo la prima slide -->
         <div class="card">
 
           <!-- creiamo il collegamento hypertext -->
@@ -34,6 +35,51 @@
           </a>
 
         </div>
+
+        <div class="card">
+
+          <!-- creiamo il collegamento hypertext -->
+          <a href="">
+            <!-- carichiamo l'immagine -->
+            <img src="img/pd2.jpg" alt="4 iphone in sequenza">
+
+
+
+            <!-- creiamo icona sconto -->
+            <div class="sales red">-5%</div>
+            <!-- /icona sconto -->
+
+            <!-- cuore preferiti -->
+            <div class="heart">&#x2665;</div>
+            <!-- /cuore preferiti -->
+
+          </a>
+
+        </div>
+
+        <div class="card">
+
+          <!-- creiamo il collegamento hypertext -->
+          <a href="">
+            <!-- carichiamo l'immagine -->
+            <img src="img/pd3.jpg" alt="cuffie beat nere">
+
+
+
+            <!-- creiamo icona sconto -->
+            <div class="sales green">-30%</div>
+            <!-- /icona sconto -->
+
+            <!-- cuore preferiti -->
+            <div class="heart">&#x2665;</div>
+            <!-- /cuore preferiti -->
+
+          </a>
+
+        </div>
+
+
+
 
       </section>
 
