--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- corpo principale della pagina -->
     <main class="container">
 
+      <!-- prima row della pagina -->
       <section>
 
         <!-- creiamo la prima slide -->
@@ -82,9 +83,77 @@
 
 
       </section>
+      <!-- /prima row -->
+
+      <!-- seconda row -->
+      <section class="row">
+
+        <!-- creiamo la prima slide -->
+        <div class="card">
+
+          <!-- creiamo il collegamento hypertext -->
+          <a href="">
+            <!-- carichiamo l'immagine -->
+            <img src="img/pd1.jpg" alt="ipad bianco con sfondo grigio">
 
 
 
+            <!-- creiamo icona sconto -->
+            <div class="sales green">-30%</div>
+            <!-- /icona sconto -->
+
+            <!-- cuore preferiti -->
+            <div class="heart">&#x2665;</div>
+            <!-- /cuore preferiti -->
+
+          </a>
+
+        </div>
+
+        <div class="card">
+
+          <!-- creiamo il collegamento hypertext -->
+          <a href="">
+            <!-- carichiamo l'immagine -->
+            <img src="img/pd2.jpg" alt="4 iphone in sequenza">
+
+
+
+            <!-- creiamo icona sconto -->
+            <div class="sales red">-5%</div>
+            <!-- /icona sconto -->
+
+            <!-- cuore preferiti -->
+            <div class="heart">&#x2665;</div>
+            <!-- /cuore preferiti -->
+
+          </a>
+
+        </div>
+
+        <div class="card">
+
+          <!-- creiamo il collegamento hypertext -->
+          <a href="">
+            <!-- carichiamo l'immagine -->
+            <img src="img/pd3.jpg" alt="cuffie beat nere">
+
+
+
+            <!-- creiamo icona sconto -->
+            <div class="sales green">-30%</div>
+            <!-- /icona sconto -->
+
+            <!-- cuore preferiti -->
+            <div class="heart">&#x2665;</div>
+            <!-- /cuore preferiti -->
+
+          </a>
+
+        </div>
+
+      </section>
+      <!-- /seconda row -->
 
     </main>
 
