allinamento centrale della pagina
modifica di body....

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main class="container">
 
       <!-- prima row della pagina -->
-      <section>
+      <section class="row">
 
         <!-- creiamo la prima slide -->
         <div class="card">
