ultimi ritocchi css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- costruiamo le sezioni della pagina -->
 
     <!-- corpo principale della pagina -->
-    <main class="container">
+    <main>
 
       <!-- prima row della pagina -->
       <section class="row">
@@ -20,6 +20,7 @@
 
           <!-- creiamo il collegamento hypertext -->
           <a href="">
+            
             <!-- carichiamo l'immagine -->
             <img src="img/pd1.jpg" alt="ipad bianco con sfondo grigio">
 
