--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
             <!-- creiamo icona sconto -->
-            <div class="sales green">-30%</div>
+            <div class="sales green">-30&percnt;</div>
             <!-- /icona sconto -->
 
             <!-- cuore preferiti -->
@@ -48,7 +48,7 @@
 
 
             <!-- creiamo icona sconto -->
-            <div class="sales red">-5%</div>
+            <div class="sales red">-5&percnt;</div>
             <!-- /icona sconto -->
 
             <!-- cuore preferiti -->
@@ -69,7 +69,7 @@
 
 
             <!-- creiamo icona sconto -->
-            <div class="sales green">-30%</div>
+            <div class="sales green">-30&percnt;</div>
             <!-- /icona sconto -->
 
             <!-- cuore preferiti -->
@@ -100,7 +100,7 @@
 
 
             <!-- creiamo icona sconto -->
-            <div class="sales green">-30%</div>
+            <div class="sales green">-30&percnt;</div>
             <!-- /icona sconto -->
 
             <!-- cuore preferiti -->
@@ -121,7 +121,7 @@
 
 
             <!-- creiamo icona sconto -->
-            <div class="sales red">-5%</div>
+            <div class="sales red">-5&percnt;</div>
             <!-- /icona sconto -->
 
             <!-- cuore preferiti -->
@@ -142,7 +142,7 @@
 
 
             <!-- creiamo icona sconto -->
-            <div class="sales green">-30%</div>
+            <div class="sales green">-30&percnt;</div>
             <!-- /icona sconto -->
 
             <!-- cuore preferiti -->
